<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sailesesiom.twitteryearone.AcercaDe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/letra"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160sp"
            android:layout_height="160sp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/txt_image_content_description"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/txt_acerca_de"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/letra" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/txt_powered_by"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/letra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fabric"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/letra" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/txt_produced_by"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/letra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saile_sesiom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/letra" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/txt_mail_contact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/letra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewEmailSaile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_mail_autor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/letra" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
